demo-10/securitygroup.tf
resource "aws_security_group" "main-sg" {
  name        = "Main SG"
  vpc_id      = aws_vpc.main.id
  description = "SG to allow SSH for all"
  ingress {
    from_port   = 22
    protocol    = "tcp"
    to_port     = 22
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    protocol    = "-1"
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "Allow SSH"
  }
}
